# LQMY-Desk

./: .gitignore  package.json  pnpm-lock.yaml  user_data.json
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  cert.pem  key.pem  tauri.conf.json
src-tauri/src/: client.rs  config.rs  error.rs  main.rs  server.rs
src-tauri/src/audio_capture/: mod.rs  winapi.rs
src-tauri/src/client_utils/: auth.rs  control.rs  current_user.rs  dialog.rs  disconnect.rs  mod.rs  password.rs  signaling.rs  user_manager.rs
src-tauri/src/server_utils/: auth.rs  mod.rs  password.rs  user_manager.rs
src-tauri/src/video_capturer/: assembly.rs  ffmpeg.rs  ffmpeg_cap.rs  mod.rs  windxgi.rs  yuv.rs
src-tauri/src/webrtc/: mod.rs  videostream.rs  webrtc_connect.rs
src/components/: HomeView.vue  UserManagement.vue
src/stores/: server.js
