[package]
name = "lqmy-desk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lqmy_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-rt = "2.5"
webrtc = "0.9.0"                                          # 根据 WebRTC 版本调整
webrtc-util = "=0.7.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
thiserror = "1.0"
rand = "0.9.0"
sha2 = "0.10.8"
jwt = "0.16.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
bytes = "1.10.1"
tauri-plugin-dialog = "2.2.1"
rfd = "0.14"
rustls = "0.21"
rustls-pemfile = "1"
awc = { version = "3.7", features = ["rustls-0_21"] }
futures-util = "0.3"
# 方便编译时使用环境变量
#[build-dependencies]
#pkg-config = "0.3"

[dev-dependencies]
actix-rt = "2.5"
